# aether-client-cpp

./: .clang-format  .clang-tidy  .gitmodules  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  README.md  cppcheck_suppressions.txt  git_init.bat  git_init.ps1  git_init.sh  library.json  opencode.json
aether/: CMakeLists.txt  adapter_registry.cpp  adapter_registry.h  address.h  address_parser.cpp  address_parser.h  ae_context.h  aether.cpp  aether.h  aether_app.cpp  aether_app.h  aether_tele.h  all.h  async_for_loop.h  capi.h  channel.cpp  channel.h  client.cpp  client.h  client_connectivity_policy.cpp  client_connectivity_policy.h  clock.h  cloud.cpp  cloud.h  common.h  config.h  config_consts.h  crc.h  crypto.h  env.h  global_ids.h  literal_array.h  memory.h  memory_buffer.h  mstream.h  mstream_buffers.h  packed_int.h  registration_cloud.cpp  registration_cloud.h  ring_buffer.h  (+17 more)
aether/access_points/: access_point.cpp  access_point.h  ethernet_access_point.cpp  ethernet_access_point.h  filter_endpoints.h  filter_protocols.h  lora_module_access_point.cpp  lora_module_access_point.h  modem_access_point.cpp  modem_access_point.h  wifi_access_point.cpp  wifi_access_point.h
aether/actions/: action.h  action2_.h  action_context.cpp  action_context.h  action_event_status.h  action_list.h  action_pool.h  action_processor.cpp  action_processor.h  action_ptr.h  action_registry.cpp  action_registry.h  action_result.h  action_trigger.cpp  action_trigger.h  action_view.h  actions_queue.h  gen_action.h  notify_action.h  pipeline.h  pipeline_queue.h  promise_action.h  repeatable_task.cpp  repeatable_task.h  task_queue.cpp  task_queue.h  timer.h  timer_action.cpp  timer_action.h  update_status.h
aether/adapters/: adapter.cpp  adapter.h  adapter_factory.cpp  adapter_factory.h  adapter_tele.h  esp32_wifi.cpp  esp32_wifi.h  ethernet.cpp  ethernet.h  lora_module_adapter.cpp  lora_module_adapter.h  modem_adapter.cpp  modem_adapter.h  parent_lora_module.cpp  parent_lora_module.h  parent_modem.cpp  parent_modem.h  parent_wifi.cpp  parent_wifi.h  proxy.h  register_wifi.h  wifi_adapter.cpp  wifi_adapter.h
aether/ae_actions/: ae_actions_tele.h  check_access_for_send_message.cpp  check_access_for_send_message.h  get_client_cloud.cpp  get_client_cloud.h  get_client_cloud_connection.cpp  get_client_cloud_connection.h  get_servers.cpp  get_servers.h  ping.cpp  ping.h  pull.cpp  select_client.cpp  select_client.h  telemetry.cpp  telemetry.h  time_sync.cpp  time_sync.h
aether/aether_c/: CPPLINT.cfg  aether_capi.cpp  aether_capi.h  c_conf.h  c_errors.h  c_types.h  c_uid.cpp  c_uid.h  extern_c.h
aether/api_protocol/: api_class.h  api_class_impl.h  api_context.h  api_message.h  api_method.h  api_pack_parser.cpp  api_pack_parser.h  api_promise.h  api_promise_action.h  api_protocol.cpp  api_protocol.h  child_data.cpp  child_data.h  make_api_call_sender.h  packet_builder.h  promise_action.h  protocol_context.cpp  protocol_context.h  request_id.h  return_result_api.cpp  return_result_api.h  send_result.h  sub_api.h
aether/channels/: channel.cpp  channel.h  channel_statistics.cpp  channel_statistics.h  channels_types.h  ethernet_channel.cpp  ethernet_channel.h  ethernet_transport_builder.cpp  ethernet_transport_builder.h  ethernet_transport_factory.cpp  ethernet_transport_factory.h  lora_module_channel.cpp  lora_module_channel.h  modem_channel.cpp  modem_channel.h  wifi_channel.cpp  wifi_channel.h
aether/client_connections/: client_cloud_connection.cpp  client_cloud_connection.h  client_connection.h  client_connection_manager.cpp  client_connection_manager.h  client_connections_tele.h  client_server_connection.cpp  client_server_connection.h  client_server_connection_pool.cpp  client_server_connection_pool.h  client_server_connection_pull.cpp  client_server_connection_pull.h  client_to_server_stream.cpp  client_to_server_stream.h  cloud_cache.cpp  cloud_cache.h  cloud_connection.cpp  cloud_connection.h  cloud_message_stream.cpp  cloud_message_stream.h  cloud_server_connection.cpp  cloud_server_connection.h  iserver_connection_factory.h  server_connection_selector.cpp  server_connection_selector.h  split_stream_client_connection.cpp  split_stream_client_connection.h
aether/client_messages/: client_messages_tele.h  message_stream.cpp  message_stream.h  message_stream_dispatcher.cpp  message_stream_dispatcher.h  p2p_message_stream.cpp  p2p_message_stream.h  p2p_message_stream_manager.cpp  p2p_message_stream_manager.h  p2p_port_handle.cpp  p2p_port_handle.h  p2p_safe_message_stream.cpp  p2p_safe_message_stream.h
aether/cloud_connections/: cloud_callbacks.h  cloud_connections_tele.h  cloud_request.cpp  cloud_request.h  cloud_server_connection.cpp  cloud_server_connection.h  cloud_server_connections.cpp  cloud_server_connections.h  cloud_subscription.cpp  cloud_subscription.h  cloud_visit.h  ping_cloud_servers.cpp  ping_cloud_servers.h  request_policy.h
aether/connection_manager/: client_cloud_manager.cpp  client_cloud_manager.h  client_connection_manager.cpp  client_connection_manager.h  client_server_connection_pool.cpp  client_server_connection_pool.h  cloud_cache.cpp  cloud_cache.h  get_cloud_action.h  get_cloud_aether.cpp  get_cloud_aether.h  iserver_connection_factory.h  iserver_connection_pool.h  iserver_priority_policy.h  server_connection_manager.cpp  server_connection_manager.h  server_connection_selector.cpp  server_connection_selector.h
aether/crc/: crc32.cpp  crc32.h
aether/crypto/: async_crypto_provider.cpp  async_crypto_provider.h  crypto_definitions.h  crypto_nonce.cpp  crypto_nonce.h  icrypto_provider.h  key.h  key_gen.cpp  sign.h  signed_key.cpp  signed_key.h  sync_crypto_provider.cpp  sync_crypto_provider.h
aether/dns/: dns_c_ares.cpp  dns_c_ares.h  dns_resolve.cpp  dns_resolve.h  dns_tele.h  esp32_dns_resolve.cpp  esp32_dns_resolve.h
aether/domain_storage/: domain_storage_factory.cpp  domain_storage_factory.h  domain_storage_tele.h  file_system_std_storage.cpp  file_system_std_storage.h  ram_domain_storage.cpp  ram_domain_storage.h  registrar_domain_storage.cpp  spifs_domain_storage.cpp  (+7 more)
(+914 files in other folders)
